--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     ]
   },
   "devDependencies": {
+    "@types/materialize-css": "^1.0.7",
     "concurrently": "^5.2.0",
     "json-server": "^0.16.1"
   },
